# telegram_talking_bot

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: build-and-push.yml
src/: main.rs
src/domain/: models.rs  use_case.rs
src/handlers/: telegram.rs
src/infrastructure/: mod.rs  sender.rs  state.rs
src/infrastructure/adapters/: deepseek.rs
src/infrastructure/clients/: deepseek.rs
src/infrastructure/repositories/: basic_repository.rs  mod.rs  repository.rs
