[package]
name = "mopsorez_telegram_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.41"
env = "1.0.1"
log = "0.4.27"
reqwest = { version = "0.12.23", features = ["json"] }
serde_json = "1.0.143"
serial_test = "3.2.0"
teloxide = "0.17.0"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
